--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "connectkit": "^1.8.0",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
+    "prisma": "^5.15.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
